# conan-sqlite3

./: .gitignore  .travis.yml  CMakeLists.txt  FindSQLite3.cmake  LICENSE  README.md  appveyor.yml  build.py  conanfile.py  conanfile_base.py  conanfile_installer.py  sqlite3.html
.ci/: entry.sh
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
test_package_installer/: conanfile.py
